fix: overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -481,7 +481,7 @@ input:checked+.slider::before {
 
 .container-forecast, .graphic{
 position: relative;
-overflow: hidden;
+
 }
 .day-weather {
   display: flex;
